[project]
name = "personal-rag"
version = "0.1.0"
description = "Personal RAG-based AI app for querying knowledge base"
dependencies = [
    "pypdf2>=3.0.0",
    "pdfplumber>=0.11.0",
    "python-docx>=1.1.0",
    "sentence-transformers>=3.0.0",
    "chromadb>=0.5.0",
    "langchain>=0.2.0",
    "ollama>=0.3.0",
    "streamlit>=1.30.0",
]

[tool.uv]
managed = true

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
ingest = "src.processing.ingest:main"
query = "src.main:query"